--- a/Latex/Bachelorarbeit.tex
+++ b/Latex/Bachelorarbeit.tex
@@ -394,6 +394,7 @@ Im heutigen Zeitalter werden Unmengen von Daten gesammelt, die sowohl strukturie
 
 Wie die Merkmale und die Zielvariable verknüpft sind, entscheidet über die Auswahl des passenden Lernalgorithmus. Im vorangehendem Kapitel haben wir bereits die Auswirkungen einzelner Faktoren erläutert. Auf Grund der Gegebenheit, dass die exakten Auswirkungen nicht umgehend erforscht sind, um sie beziffern zu können und sich zudem das gleiche Merkmal bei verschiedenen Solaranlagen unterschiedlich stark auswirken kann, ist ein Lernalgorithmus die richtige Wahl für diesen Anwendungsfall. Nicht zu vergessen, müssten bei einem konventionellem Algorithmus\footnote{Für jeden Anwendungsfall werden bei einem konventionellem Algorithmus eine Reihe von Regeln festgelegt, die ein jeweiliger Programmierer umsetzt.} Informationen über die Spezifikationen der Solaranlage einfließen, wodurch die Programmierung des Algorithmus zunehmend komplexer werden würde.
 
+Zuletzt gilt es zu überprüfen, wie stark die verschiedenen Merkmale tatsächlich mit der Zielvariablen korrelieren. Falls manche Merkmale zu irrelevant sind und dementsprechend nur geringe Auswirkungen auf die Stromerzeugung haben, kann die Eliminierung dieser Merkmale zu einer Verbesserung der Leistungsfähigkeit des Lernalgorithmus führen. 
 
 \newpage
 
